--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -184,7 +184,7 @@
                 <h2 class="section-title centered">Наша команда</h2>
                 <ul class="team-list list ">
                     <li class="team-list__item">
-                        <img src="./images/images1/igor.jpg" alt="Игорь Демьяненко" width="270" height="260">
+                        <img class="team-list__img" src="./images/images1/igor.jpg" alt="Игорь Демьяненко">
                         <div class="team-box">
                             <h3 class="team-box__title">Игорь Демьяненко</h3>
                             <p class="team-box__text">Product Designer</p>
@@ -221,7 +221,7 @@
                         </div>                     
                     </li>
                     <li class="team-list__item">
-                         <img src="./images/images1/helga.jpg" alt="Ольга Репина" width="270" height="260">
+                         <img class="team-list__img" src="./images/images1/helga.jpg" alt="Ольга Репина">
                          <div class="team-box">
                             <h3 class="team-box__title">Ольга Репина</h3>
                             <p class="team-box__text">Frontend Developer</p>
@@ -258,7 +258,7 @@
                          </div>                   
                     </li>
                     <li class="team-list__item">
-                     <img src="./images/images1/nikola.jpg" alt="Николай Тарасов" width="270" height="260">
+                     <img class="team-list__img" src="./images/images1/nikola.jpg" alt="Николай Тарасов">
                      <div class="team-box">
                         <h3 class="team-box__title">Николай Тарасов</h3>
                         <p class="team-box__text">Marketing</p>
@@ -295,7 +295,7 @@
                      </div>                     
                     </li>
                     <li class="team-list__item">
-                     <img src="./images/images1/mih.jpg" alt="Михаил Ермаков" width="270" height="260">
+                     <img class="team-list__img" src="./images/images1/mih.jpg" alt="Михаил Ермаков">
                      <div class="team-box">
                         <h3 class="team-box__title">Михаил Ермаков</h3>
                         <p class="team-box__text">UI Designer</p>
@@ -335,9 +335,9 @@
             </div>           
         </section>    
     <!--PARTNERS-->
-    <section class="section clients">
+    <section class="clients section">
         <div class="conteiner clients-conteiner">
-            <h2 class="section-title centered">Постоянные клиенты</h2>
+            <h2 class="section-title centerd">Постоянные клиенты</h2>
             <ul class="clients-list list">
                 <li class="clients-list__item">
                     <a class="clients-list__link" href="">
