icon-btn-commit

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
             <a href="" class="logo">Web<span class="logo__title"> Studio</span>
             </a>
             <button class="header-menu__btn" type="button" aria-expanded="true" aria-controls="menu-conteiner" data-menu-button>
-                <svg>
-                    <use></use>
+                <svg class="header-menu__icon" width="24" height="24" aria-label="переключатель мобильного меню">
+                    <use class="header-menu__icon-cross" href="./images/sprite-contact.svg#icon-close-black-18dp-2-1-1"></use>
+                    <use class="header-menu__icon-menu" href="./images/sprite-contact.svg#icon-menu"></use>
                 </svg>
             </button>
             <nav class="navigation">
