--- a/index.html
+++ b/index.html
@@ -190,19 +190,19 @@
                 <h2 class="section-title centered">Чем мы занимаемся</h2>
                 <ul class="do-list list">
                     <li class="do-list__item">
-                        <img src="./images/images1/pc1.jpg" alt="picture1" width="370">
+                        <img src="/images/images1/do/dp1.jpg" alt="picture1" width="370">
                        <div class="do-thumb">
                            <p class="do-thumb__text">Десктопные приложения</p>
                      </div>                                     
                     </li>
                     <li class="do-list__item">
-                        <img src="./images/images1/pc2.jpg" alt="picture2" width="370">
+                        <img src="/images/images1/do/mp1.jpg" alt="picture2" width="370">
                         <div class="do-thumb">
                             <p class="do-thumb__text">Мобильные приложения</p>
                         </div>
                     </li>
                     <li class="do-list__item">
-                        <img src="./images/images1/pc3.jpg" alt="picture3" width="370">
+                        <img src="/images/images1/do/dr1.jpg" alt="picture3" width="370">
                         <div class="do-thumb">
                             <p class="do-thumb__text">Дизайнерские решения</p>
                         </div>
@@ -216,7 +216,7 @@
                 <h2 class="section-title centered">Наша команда</h2>
                 <ul class="team-list list ">
                     <li class="team-list__item">
-                        <img class="team-list__img" src="./images/images1/igor.jpg" alt="Игорь Демьяненко">
+                        <img class="team-list__img" src="/images/images1/team/id1.jpg" alt="Игорь Демьяненко">
                         <div class="team-box">
                             <h3 class="team-box__title">Игорь Демьяненко</h3>
                             <p class="team-box__text">Product Designer</p>
@@ -253,7 +253,7 @@
                         </div>                     
                     </li>
                     <li class="team-list__item">
-                         <img class="team-list__img" src="./images/images1/helga.jpg" alt="Ольга Репина">
+                         <img class="team-list__img" src="/images/images1/team/or1.jpg" alt="Ольга Репина">
                          <div class="team-box">
                             <h3 class="team-box__title">Ольга Репина</h3>
                             <p class="team-box__text">Frontend Developer</p>
@@ -290,7 +290,7 @@
                          </div>                   
                     </li>
                     <li class="team-list__item">
-                     <img class="team-list__img" src="./images/images1/nikola.jpg" alt="Николай Тарасов">
+                     <img class="team-list__img" src="/images/images1/team/nt1.jpg" alt="Николай Тарасов">
                      <div class="team-box">
                         <h3 class="team-box__title">Николай Тарасов</h3>
                         <p class="team-box__text">Marketing</p>
@@ -327,7 +327,7 @@
                      </div>                     
                     </li>
                     <li class="team-list__item">
-                        <img class="team-list__img" src="./images/images1/mih.jpg" alt="Михаил Ермаков">
+                        <img class="team-list__img" src="/images/images1/team/me1.jpg" alt="Михаил Ермаков">
                         <div class="team-box">
                            <h3 class="team-box__title">Михаил Ермаков</h3>
                            <p class="team-box__text">UI Designer</p>
