--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,13 @@
             <ul class="project-list list">
                 <li class="project-list_item">
                     <div class="action">
-                        <img class="action-icon" src="./images/images1/технокряк.jpg" alt="Макет Вєб-сайта">
+                        <img class="action-icon" 
+                        srcset="
+                        /images/images1/project/tehno1.jpg 1x,
+                        /images/images1/project/tehno2.jpg 2x"
+                        src="/images/images1/project/tehno1.jpg"
+                        alt="Макет Вєб-сайта"
+                        sizes="(min-width: 480px) 2x, (min-width: 787px) 1x">
                         <p class="poster-text-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице</p>
                     </div>
                     <div class="bloc">  
@@ -107,7 +113,11 @@
                 </li>
                 <li class="project-list_item">                    
                     <div class="action">
-                        <img class="action-icon" src="./images/images1/ПостерNOGS.jpg" alt="Постер">
+                        <img class="action-icon" 
+                        srcset="/images/images1/project/poster1.jpg 1x, /images/images1/project/poster2.jpg 2x"
+                        src="/images/images1/project/poster1.jpg" 
+                        alt="Постер"
+                        sizes="(min-width: 480px) 2x, (min-width: 787px) 1x">
                         <p class="poster-text-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице</p>
                     </div>
                     <div class="bloc">
@@ -117,7 +127,11 @@
                 </li>
                 <li class="project-list_item">                    
                     <div class="action">
-                        <img class="action-icon" src="./images/images1/РесторанSeafood.jpg" alt="Макет для ресторана">
+                        <img class="action-icon" 
+                        srcset="/images/images1/project/resto1.jpg 1x, /images/images1/project/resto2.jpg 2x"
+                        src="/images/images1/project/resto1.jpg" 
+                        alt="Макет для ресторана"
+                        sizes="(min-width: 480px) 2x, (min-width: 787px) 1x" >
                         <p class="poster-text-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице</p>
                     </div>
                     <div class="bloc">
@@ -127,7 +141,11 @@
                 </li>
                 <li class="project-list_item">
                     <div class="action">
-                        <img class="action-icon" src="./images/images1/ПроектBoxes.jpg" alt="коробочки">
+                        <img class="action-icon" 
+                        srcset="/images/images1/project/prime1.jpg 1x, /images/images1/project/prime2.jpg 2x"
+                        src="/images/images1/project/prime1.jpg" 
+                        alt="коробочки"
+                        sizes="(min-width: 480px) 2x, (min-width: 787px) 1x">
                         <p class="poster-text-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице</p>
                     </div>                     
                     <div class="bloc">
@@ -137,7 +155,11 @@
                 </li>
                 <li class="project-list_item">
                     <div class="action">
-                        <img class="action-icon" src="./images/images1/ПроектBoxes.jpg" alt="коробочки">
+                        <img class="action-icon" 
+                        srcset="/images/images1/project/box1.jpg 1x, /images/images1/project/box2.jpg 2x"
+                        src="/images/images1/project/box1.jpg" 
+                        alt="коробочки"
+                        sizes="(min-width: 480px) 2x, (min-width: 787px) 1x">
                         <p class="poster-text-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице</p>
                     </div>                   
                     <div class="bloc">  
@@ -147,7 +169,11 @@
                 </li>
                 <li class="project-list_item">
                     <div class="action">
-                        <img class="action-icon" src="./images/images1/InspirationhasnoBorders.jpg" alt="монитор">
+                        <img class="action-icon" 
+                        srcset="/images/images1/project/border1.jpg 1x, /images/images1/project/border2.jpg 2x"
+                        src="/images/images1/project/border1.jpg" 
+                        alt="монитор"
+                        sizes="(min-width: 480px) 2x, (min-width: 787px) 1x">
                         <p class="poster-text-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице</p>
                     </div>                      
                     <div class="bloc">
@@ -157,7 +183,11 @@
                 </li>
                 <li class="project-list_item">
                     <div class="action">
-                        <img class="action-icon" src="./images/images1/ИзданиеLimitedEdition.jpg" alt="журнал">
+                        <img class="action-icon" 
+                        srcset="/images/images1/project/edition1.jpg 1x, /images/images1/project/edition2.jpg 2x"
+                        src="/images/images1/project/edition1.jpg" 
+                        alt="журнал"
+                        sizes="(min-width: 480px) 2x, (min-width: 787px) 1x">
                         <p class="poster-text-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице</p>
                     </div>                      
                     <div class="bloc">
@@ -167,7 +197,11 @@
                 </li>
                 <li class="project-list_item">
                     <div class="action">
-                        <img class="action-icon" src="./images/images1/ПроектLAB.jpg" alt="пост-материал" >
+                        <img class="action-icon" 
+                        srcset="/images/images1/project/lab1.jpg 1x, /images/images1/project/lab2.jpg 2x"
+                        src="/images/images1/project/lab1.jpg" 
+                        alt="пост-материал" 
+                        sizes="(min-width: 480px) 2x, (min-width: 787px) 1x">
                         <p class="poster-text-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице</p>
                     </div>                      
                     <div class="bloc">
@@ -177,7 +211,11 @@
                 </li>
                 <li class="project-list_item">
                     <div class="action">
-                        <img class="action-icon" src="./images/images1/GrowingBusiness.jpg" alt="ноут с веб-сайтом">
+                        <img class="action-icon" 
+                        srcset="/images/images1/project/grow1.jpg 1x, /images/images1/project/grow2.jpg 2x"
+                        src="/images/images1/project/grow1.jpg" 
+                        alt="ноут с веб-сайтом"
+                        sizes="(min-width: 480px) 2x, (min-width: 787px) 1x" >
                         <p class="poster-text-hover">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице</p>
                     </div>                     
                     <div class="bloc">
@@ -191,7 +229,7 @@
     </section>
     </main>
     <!--Attic-->
-    <footer class="footer">    
+    <footer class="footer section no-padding">    
         <div class="conteiner footer-conteiner">
             <div class="box-logo">
                 <a href="" class="logo-footer">
@@ -252,6 +290,7 @@
             </div>
         </div>        
     </footer>
+    <script src="./js/menu.js"></script>
 </body>
 </html>
 
