--- a/index.html
+++ b/index.html
@@ -216,7 +216,11 @@
                 <h2 class="section-title centered">Наша команда</h2>
                 <ul class="team-list list ">
                     <li class="team-list__item">
-                        <img class="team-list__img" src="/images/images1/team/id1.jpg" alt="Игорь Демьяненко">
+                        <img class="team-list__img" 
+                        srcset="/images/images1/team/id1.jpg 1x, /images/images1/team/id2.jpg 2x"
+                        src="/images/images1/team/id1.jpg" 
+                        alt="Игорь Демьяненко"
+                        sizes="(min-width: 480px) 2x, (min-width: 787px) 1x">
                         <div class="team-box">
                             <h3 class="team-box__title">Игорь Демьяненко</h3>
                             <p class="team-box__text">Product Designer</p>
@@ -253,7 +257,11 @@
                         </div>                     
                     </li>
                     <li class="team-list__item">
-                         <img class="team-list__img" src="/images/images1/team/or1.jpg" alt="Ольга Репина">
+                         <img class="team-list__img" 
+                         srcset="/images/images1/team/or1.jpg 1x, /images/images1/team/or2.jpg 2x"
+                         src="/images/images1/team/or1.jpg" 
+                         alt="Ольга Репина"
+                         sizes="(min-width: 480px) 2x, (min-width: 787px) 1x">
                          <div class="team-box">
                             <h3 class="team-box__title">Ольга Репина</h3>
                             <p class="team-box__text">Frontend Developer</p>
@@ -290,7 +298,11 @@
                          </div>                   
                     </li>
                     <li class="team-list__item">
-                     <img class="team-list__img" src="/images/images1/team/nt1.jpg" alt="Николай Тарасов">
+                     <img class="team-list__img" 
+                     srcset="/images/images1/team/nt1.jpg 1x, /images/images1/team/nt2.jpg 2x"
+                     src="/images/images1/team/nt1.jpg" 
+                     alt="Николай Тарасов"
+                     sizes="(min-width: 480px) 2x, (min-width: 787px) 1x">
                      <div class="team-box">
                         <h3 class="team-box__title">Николай Тарасов</h3>
                         <p class="team-box__text">Marketing</p>
@@ -327,7 +339,11 @@
                      </div>                     
                     </li>
                     <li class="team-list__item">
-                        <img class="team-list__img" src="/images/images1/team/me1.jpg" alt="Михаил Ермаков">
+                        <img class="team-list__img" 
+
+                        src="/images/images1/team/me1.jpg" 
+                        alt="Михаил Ермаков"
+                        sizes="(min-width: 480px) 2x, (min-width: 787px) 1x">
                         <div class="team-box">
                            <h3 class="team-box__title">Михаил Ермаков</h3>
                            <p class="team-box__text">UI Designer</p>
