correct_do-commit

--- a/index.html
+++ b/index.html
@@ -190,19 +190,31 @@
                 <h2 class="section-title centered">Чем мы занимаемся</h2>
                 <ul class="do-list list">
                     <li class="do-list__item">
-                        <img src="/images/images1/do/dp1.jpg" alt="picture1" width="370">
+                        <img 
+                        srcset="/images/images1/do/dp1.jpg, /images/images1/do/dp2.jpg"
+                        src="/images/images1/do/dp1.jpg" 
+                        alt="picture1" 
+                        width="370">
                        <div class="do-thumb">
                            <p class="do-thumb__text">Десктопные приложения</p>
                      </div>                                     
                     </li>
                     <li class="do-list__item">
-                        <img src="/images/images1/do/mp1.jpg" alt="picture2" width="370">
+                        <img 
+                        srcset="/images/images1/do/mp1.jpg, images/images1/do/mp2.jpg"
+                        src="/images/images1/do/mp1.jpg" 
+                        alt="picture2" 
+                        width="370">
                         <div class="do-thumb">
                             <p class="do-thumb__text">Мобильные приложения</p>
                         </div>
                     </li>
                     <li class="do-list__item">
-                        <img src="/images/images1/do/dr1.jpg" alt="picture3" width="370">
+                        <img 
+                        srcset="/images/images1/do/dr1.jpg, /images/images1/do/dr2.jpg"
+                        src="/images/images1/do/dr1.jpg" 
+                        alt="picture3" 
+                        width="370">
                         <div class="do-thumb">
                             <p class="do-thumb__text">Дизайнерские решения</p>
                         </div>
