--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                 <ul class="do-list list">
                     <li class="do-list__item">
                         <img 
-                        srcset="/images/images1/do/dp1.jpg, /images/images1/do/dp2.jpg"
-                        src="/images/images1/do/dp1.jpg" 
+                        srcset="./images/images1/do/dp1.jpg, ./images/images1/do/dp2.jpg"
+                        src="./images/images1/do/dp1.jpg" 
                         alt="picture1" 
                         width="370">
                        <div class="do-thumb">
@@ -201,8 +201,8 @@
                     </li>
                     <li class="do-list__item">
                         <img 
-                        srcset="/images/images1/do/mp1.jpg, images/images1/do/mp2.jpg"
-                        src="/images/images1/do/mp1.jpg" 
+                        srcset="./images/images1/do/mp1.jpg, ./images/images1/do/mp2.jpg"
+                        src="./images/images1/do/mp1.jpg" 
                         alt="picture2" 
                         width="370">
                         <div class="do-thumb">
@@ -211,8 +211,8 @@
                     </li>
                     <li class="do-list__item">
                         <img 
-                        srcset="/images/images1/do/dr1.jpg, /images/images1/do/dr2.jpg"
-                        src="/images/images1/do/dr1.jpg" 
+                        srcset="./images/images1/do/dr1.jpg, ./images/images1/do/dr2.jpg"
+                        src="./images/images1/do/dr1.jpg" 
                         alt="picture3" 
                         width="370">
                         <div class="do-thumb">
@@ -229,8 +229,8 @@
                 <ul class="team-list list ">
                     <li class="team-list__item">
                         <img class="team-list__img" 
-                        srcset="/images/images1/team/id1.jpg 1x, /images/images1/team/id2.jpg 2x"
-                        src="/images/images1/team/id1.jpg" 
+                        srcset="./images/images1/team/id1.jpg 1x, ./images/images1/team/id2.jpg 2x"
+                        src="./images/images1/team/id1.jpg" 
                         alt="Игорь Демьяненко"
                         sizes="(min-width: 480px) 2x, (min-width: 787px) 1x">
                         <div class="team-box">
@@ -270,8 +270,8 @@
                     </li>
                     <li class="team-list__item">
                          <img class="team-list__img" 
-                         srcset="/images/images1/team/or1.jpg 1x, /images/images1/team/or2.jpg 2x"
-                         src="/images/images1/team/or1.jpg" 
+                         srcset="./images/images1/team/or1.jpg 1x, ./images/images1/team/or2.jpg 2x"
+                         src="./images/images1/team/or1.jpg" 
                          alt="Ольга Репина"
                          sizes="(min-width: 480px) 2x, (min-width: 787px) 1x">
                          <div class="team-box">
@@ -311,8 +311,8 @@
                     </li>
                     <li class="team-list__item">
                      <img class="team-list__img" 
-                     srcset="/images/images1/team/nt1.jpg 1x, /images/images1/team/nt2.jpg 2x"
-                     src="/images/images1/team/nt1.jpg" 
+                     srcset="./images/images1/team/nt1.jpg 1x, ./images/images1/team/nt2.jpg 2x"
+                     src="./images/images1/team/nt1.jpg" 
                      alt="Николай Тарасов"
                      sizes="(min-width: 480px) 2x, (min-width: 787px) 1x">
                      <div class="team-box">
@@ -352,8 +352,8 @@
                     </li>
                     <li class="team-list__item">
                         <img class="team-list__img" 
-
-                        src="/images/images1/team/me1.jpg" 
+                        srcset="./images/images1/team/me1.jpg 1x, ./images/images1/team/me2.jpg 2x"
+                        src="./images/images1/team/me1.jpg" 
                         alt="Михаил Ермаков"
                         sizes="(min-width: 480px) 2x, (min-width: 787px) 1x">
                         <div class="team-box">
