--- a/index.html
+++ b/index.html
@@ -190,31 +190,33 @@
                 <h2 class="section-title centered">Чем мы занимаемся</h2>
                 <ul class="do-list list">
                     <li class="do-list__item">
-                        <img 
-                        srcset="./images/images1/do/dp1.jpg, ./images/images1/do/dp2.jpg"
-                        src="./images/images1/do/dp1.jpg" 
-                        alt="picture1" 
-                        width="370">
+                        <picture>
+                            <source  srcset="./images/images1/do/dp1.jpg, ./images/images1/do/dp2.jpg" type="image/webp" />
+
+                            <img src="./images/images1/do/dp1.jpg" alt="picture1" width="370">
+                        </picture>
+                        
                        <div class="do-thumb">
                            <p class="do-thumb__text">Десктопные приложения</p>
                      </div>                                     
                     </li>
                     <li class="do-list__item">
-                        <img 
-                        srcset="./images/images1/do/mp1.jpg, ./images/images1/do/mp2.jpg"
-                        src="./images/images1/do/mp1.jpg" 
-                        alt="picture2" 
-                        width="370">
+                        <picture>
+                            <source  srcset="./images/images1/do/mp1.jpg, ./images/images1/do/mp2.jpg" type="image/webp" />
+
+                            <img src="./images/images1/do/mp1.jpg" alt="picture2" width="370">
+                        </picture>
+                        
                         <div class="do-thumb">
                             <p class="do-thumb__text">Мобильные приложения</p>
                         </div>
                     </li>
                     <li class="do-list__item">
-                        <img 
-                        srcset="./images/images1/do/dr1.jpg, ./images/images1/do/dr2.jpg"
-                        src="./images/images1/do/dr1.jpg" 
-                        alt="picture3" 
-                        width="370">
+                        <picture>
+                            <source  srcset="./images/images1/do/dr1.jpg, ./images/images1/do/dr2.jpg" type="image/webp" />
+
+                            <img src="./images/images1/do/dr1.jpg"  alt="picture3" width="370">
+                        </picture>
                         <div class="do-thumb">
                             <p class="do-thumb__text">Дизайнерские решения</p>
                         </div>
