--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
     </section>
 </main>
   <!--Attic-->
-    <footer class="footer section no-padding">    
+    <footer class="footer section">    
         <div class="conteiner footer-conteiner">
             <div class="box-logo">
                 <a href="" class="logo-footer">
