size_form-commit

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                 <label class="comment-form__name" for="comment">
                                     <span class="stile-name">Комментарий</span>
                                 </label>
-                                <textarea name="commit" rows="10" id="comment" placeholder="Введите текст"></textarea>                            
+                                <textarea class="field__comment" name="commit" rows="10" id="comment" placeholder="Введите текст"></textarea>                            
                             </div>
                             <div class="policy-form">
                                 <label class="policy-form__name" for="policy">
